# ENDOAI

./: .env.example  .flake8  .gitattributes  .gitignore  .gitkeep  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPILOT.md  COPILOT_CONTEXT.md  Dockerfile  FILE_OVERVIEW.md  LICENSE  README.md  dev-requirements.txt  profiler.py  pyproject.toml
.copilot/: INSTRUCTIONS.md  PROBLEMS.md  PROJECT_GOALS_AND_SRC.md  PROJECT_STRUCTURE.md  README.md  RELATED_FILES.md  SYMBOLS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DEPLOYMENT.md  README.md  TESTING.md  USAGE.md  index.rst  usage.md
endoai/: README.md  __init__.py  environment.yml  main.py  requirements.txt
endoai/core/: README.md  __init__.py  logger.py
endoai/data/: README.md  __init__.py
endoai/install/: README.md  __init__.py  check_install.py  install_modules.py
endoai/models/: README.md  __init__.py
endoai/notebooks/: README.md  __init__.py
endoai/pipelines/: README.md  __init__.py
endoai/src/: README.md  __init__.py
endoai/tests/: README.md  __init__.py  test_basic.py  test_logger.py
endoai/validation/: README.md  __init__.py  evaluate.py  metrics.py  visualize_predictions.py
scripts/: README.md  list_python_files.py  pre-commit.sh
scripts/data/: README.md  __init__.py  download_public_dataset.py
scripts/deploy/: README.md  __init__.py  export_model.py
scripts/git/: README.md  __init__.py  git_automation.py
scripts/inference/: README.md  __init__.py  predict.py
tests/: README.md
(+50 files in other folders)
