[tool.poetry]
name = "endoai"
version = "0.1.0"
description = "ENDOAI: A project for AI-assisted endometriosis surgery."
authors = ["Kevin Hildebrand <kevin@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
monai = "^1.2.0"
torch = "^2.0.0"
numpy = "^1.24.0"
nibabel = "^5.1.0"
pydicom = "^2.4.0"
wandb = "^0.19.11"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pylint = "^2.17.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"
pre-commit = "^3.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
